# jsonb-sql

./: .env-example  .envrc  .gitignore  README.md  db.sh  docker-compose.yml  pyproject.toml
src/: convert.py  models.py  populate.py
